# eda_ru_recipes_downloader

./: README.md  pyproject.toml
eda_ru_parser/: main.py  recipe.py  server.py
eda_ru_parser/parsers/: abstract_parser.py  eda_ru_parser.py  parser_factory.py  wprm_based_parser.py
